--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -11,7 +11,9 @@ database:
     version: "10.4"
 use_dns_when_possible: true
 composer_version: "2"
-web_environment: []
+web_environment: [
+    WP_ENV=local
+]
 
 # Key features of DDEV's config.yaml:
 
