Adding support to multiple areas from Wordpress the hirarchy

--- a/.htaccess
+++ b/.htaccess
@@ -1,68 +1,13 @@
 ## BLACKLIST IP AUTO ADDED ##
 
-# on Sat, 24 Aug 2024 20:00:47 +0000 Last 10days Blacklist IPs
+# on Sun, 25 Aug 2024 19:00:45 +0000 Last 10days Blacklist IPs
 ###############################################################################
 # LIVE BLACKLIST IPv4/IPv6 ADDRESSES DATABASE
 # URL: https://myip.ms/browse/blacklist
 #
-#  Myip.ms Blacklist IPs in this List: 927 ip (14 August 2024 - 24 August 2024)
+#  Myip.ms Blacklist IPs in this List: 893 ip (15 August 2024 - 25 August 2024)
 #
 
-deny from 44.222.195.170
-deny from 43.134.33.254
-deny from 43.134.32.184
-deny from 44.200.142.112
-deny from 43.153.207.93
-deny from 114.119.131.2
-deny from 3.149.254.42
-deny from 206.217.131.28
-deny from 114.119.128.40
-deny from 114.119.146.179
-deny from 159.146.38.197
-deny from 114.119.142.210
-deny from 187.157.243.254
-deny from 43.134.1.40
-deny from 114.119.150.57
-deny from 114.119.137.173
-deny from 168.119.68.190
-deny from 114.119.135.126
-deny from 114.119.128.57
-deny from 114.119.142.69
-deny from 43.133.59.220
-deny from 114.119.146.7
-deny from 114.119.147.181
-deny from 43.134.121.40
-deny from 114.119.166.63
-deny from 154.242.1.69
-deny from 157.245.54.253
-deny from 114.119.153.208
-deny from 23.235.98.147
-deny from 195.154.122.237
-deny from 43.134.59.218
-deny from 18.220.239.46
-deny from 3.145.186.67
-deny from 8.219.64.236
-deny from 69.16.147.120
-deny from 43.134.68.153
-deny from 197.184.183.32
-deny from 173.240.13.62
-deny from 173.255.173.115
-deny from 169.1.16.206
-deny from 98.80.101.112
-deny from 188.166.241.238
-deny from 97.64.18.60
-deny from 198.176.56.19
-deny from 197.113.118.118
-deny from 168.119.65.53
-deny from 180.178.44.146
-deny from 52.14.214.177
-deny from 185.220.101.15
-deny from 143.198.82.30
-deny from 154.30.210.36
-deny from 209.127.245.250
-deny from 87.211.240.191
-deny from 82.152.165.218
-deny from 51.222.32.203
 deny from 49.249.49.232
 deny from 195.154.122.187
 deny from 89.163.150.142
@@ -71,14 +16,12 @@ deny from 2.102.105.119
 deny from 195.62.32.117
 deny from 192.42.116.211
 deny from 157.245.159.148
-deny from 46.28.104.66
 deny from 88.150.230.186
 deny from 185.220.101.109
 deny from 103.210.35.131
 deny from 175.107.215.9
 deny from 13.115.222.189
 deny from 185.174.159.151
-deny from 192.42.116.216
 deny from 85.166.192.78
 deny from 195.154.122.170
 deny from 199.33.68.253
@@ -102,7 +45,6 @@ deny from 154.90.49.103
 deny from 206.189.81.126
 deny from 37.187.109.70
 deny from 168.119.68.175
-deny from 136.243.220.212
 deny from 74.80.208.142
 deny from 185.108.106.251
 deny from 34.90.31.179
@@ -142,19 +84,16 @@ deny from 36.85.219.10
 deny from 147.78.47.236
 deny from 143.198.82.24
 deny from 159.138.123.253
-deny from 192.42.116.215
 deny from 185.243.218.202
 deny from 168.119.65.116
 deny from 192.42.116.214
 deny from 69.16.157.192
 deny from 2.58.56.220
 deny from 198.181.163.253
-deny from 185.107.57.64
 deny from 37.27.198.141
 deny from 200.174.198.91
 deny from 200.174.198.236
 deny from 45.228.233.92
-deny from 45.94.31.68
 deny from 178.128.210.200
 deny from 190.223.60.131
 deny from 130.61.181.220
@@ -162,7 +101,6 @@ deny from 59.153.17.40
 deny from 216.131.68.240
 deny from 64.124.8.160
 deny from 123.136.28.128
-deny from 103.141.208.84
 deny from 219.76.130.110
 deny from 20.44.188.17
 deny from 103.169.101.177
@@ -173,7 +111,6 @@ deny from 103.95.98.12
 deny from 194.246.34.224
 deny from 94.16.121.226
 deny from 77.239.21.31
-deny from 168.119.68.254
 deny from 27.98.187.65
 deny from 41.231.37.76
 deny from 167.172.87.142
@@ -183,12 +120,10 @@ deny from 133.242.171.242
 deny from 216.131.112.242
 deny from 103.209.255.118
 deny from 136.243.228.193
-deny from 103.50.168.22
 deny from 109.172.127.234
 deny from 20.27.86.185
 deny from 187.249.5.18
 deny from 146.190.105.99
-deny from 89.58.26.216
 deny from 207.241.226.206
 deny from 13.74.50.26
 deny from 212.200.181.96
@@ -222,7 +157,6 @@ deny from 34.91.89.217
 deny from 203.188.254.106
 deny from 20.171.206.182
 deny from 194.15.113.66
-deny from 185.220.101.16
 deny from 203.76.121.18
 deny from 114.130.185.59
 deny from 20.42.10.187
@@ -250,22 +184,15 @@ deny from 20.42.10.191
 deny from 20.42.10.184
 deny from 102.88.70.118
 deny from 146.59.56.24
-deny from 136.243.220.213
 deny from 194.233.78.218
 deny from 20.171.206.168
 deny from 185.220.100.241
-deny from 192.42.116.185
-deny from 185.220.101.9
 deny from 20.42.10.176
 deny from 45.66.35.20
 deny from 110.235.232.138
-deny from 192.42.116.177
 deny from 20.171.206.47
 deny from 20.171.206.216
-deny from 192.42.116.173
-deny from 85.208.98.24
 deny from 20.171.206.198
-deny from 109.70.100.66
 deny from 35.204.103.148
 deny from 34.147.10.6
 deny from 34.91.7.216
@@ -274,38 +201,26 @@ deny from 216.244.66.228
 deny from 85.208.98.19
 deny from 84.247.50.195
 deny from 205.185.125.235
-deny from 185.220.101.30
 deny from 199.195.253.213
 deny from 159.65.0.8
 deny from 176.67.86.247
 deny from 222.108.214.141
 deny from 3.12.74.179
 deny from 217.113.194.96
-deny from 217.113.194.93
 deny from 203.78.103.184
-deny from 217.113.194.100
-deny from 217.113.194.99
-deny from 217.113.194.101
-deny from 217.113.194.98
 deny from 136.243.220.210
-deny from 217.113.194.92
-deny from 185.220.101.22
 deny from 217.113.194.97
 deny from 154.54.249.202
 deny from 217.113.194.95
 deny from 192.42.116.174
-deny from 192.42.116.183
 deny from 20.171.206.125
 deny from 217.113.194.94
 deny from 20.171.206.92
 deny from 80.67.172.162
 deny from 185.220.101.1
-deny from 185.220.101.12
 deny from 212.200.181.216
 deny from 188.253.4.125
-deny from 185.220.101.20
 deny from 178.128.48.250
-deny from 185.220.101.25
 deny from 20.44.189.184
 deny from 146.190.133.25
 deny from 103.231.239.166
@@ -322,7 +237,6 @@ deny from 185.220.101.8
 deny from 157.245.61.72
 deny from 20.171.206.243
 deny from 182.48.87.89
-deny from 185.220.101.6
 deny from 8.217.186.131
 deny from 157.10.172.128
 deny from 31.171.154.43
@@ -335,25 +249,21 @@ deny from 140.82.11.186
 deny from 185.220.101.21
 deny from 104.207.135.6
 deny from 141.94.160.160
-deny from 45.148.10.169
 deny from 152.42.176.209
 deny from 192.42.116.219
 deny from 114.119.131.151
 deny from 149.28.225.50
-deny from 45.148.10.111
 deny from 194.135.119.10
 deny from 209.222.10.196
 deny from 114.119.151.82
 deny from 45.32.5.145
 deny from 114.119.148.37
-deny from 185.107.57.65
 deny from 66.135.29.12
 deny from 192.42.116.197
 deny from 168.119.64.250
 deny from 197.184.178.109
 deny from 45.77.207.133
 deny from 118.179.153.150
-deny from 216.244.66.251
 deny from 213.159.209.87
 deny from 68.183.179.175
 deny from 104.248.159.166
@@ -407,30 +317,21 @@ deny from 206.189.44.214
 deny from 114.119.151.108
 deny from 168.119.65.123
 deny from 114.119.145.42
-deny from 80.67.167.81
 deny from 192.42.116.186
 deny from 185.220.100.255
 deny from 114.119.133.85
 deny from 128.199.220.37
-deny from 103.234.26.105
 deny from 192.42.116.209
 deny from 41.238.64.214
-deny from 27.147.184.218
 deny from 197.58.229.47
 deny from 185.220.101.23
-deny from 103.197.206.89
-deny from 136.243.228.181
-deny from 185.220.100.243
 deny from 62.113.99.128
-deny from 103.122.139.18
 deny from 85.208.96.199
 deny from 85.208.96.198
-deny from 103.251.167.20
 deny from 78.142.18.219
 deny from 185.191.171.1
 deny from 185.191.171.16
 deny from 103.169.101.25
-deny from 118.179.205.98
 deny from 85.208.96.196
 deny from 185.191.171.10
 deny from 109.70.100.1
@@ -442,13 +343,10 @@ deny from 185.191.171.7
 deny from 85.208.96.197
 deny from 185.191.171.18
 deny from 185.191.171.17
-deny from 103.141.208.102
-deny from 200.24.131.125
 deny from 85.208.96.202
 deny from 185.191.171.2
 deny from 85.208.96.193
 deny from 119.148.35.99
-deny from 46.140.11.186
 deny from 85.208.96.203
 deny from 27.147.218.162
 deny from 185.191.171.14
@@ -456,11 +354,9 @@ deny from 85.208.96.200
 deny from 185.191.171.12
 deny from 85.208.96.205
 deny from 185.191.171.8
-deny from 109.70.100.6
 deny from 85.208.96.209
 deny from 109.70.100.4
 deny from 109.70.100.71
-deny from 185.220.100.253
 deny from 185.191.171.5
 deny from 109.70.100.5
 deny from 185.191.171.15
@@ -469,10 +365,8 @@ deny from 185.191.171.9
 deny from 185.191.171.6
 deny from 45.83.104.137
 deny from 85.208.96.210
-deny from 185.191.171.11
 deny from 109.70.100.68
 deny from 85.208.96.204
-deny from 109.70.100.70
 deny from 85.208.96.201
 deny from 185.191.171.3
 deny from 185.220.101.26
@@ -901,10 +795,81 @@ deny from 123.136.25.161
 deny from 182.160.110.125
 deny from 89.58.41.156
 deny from 109.245.32.122
-deny from 2001:171b:226a:8b20:d5a9:41ab:970:5d52
-deny from 2600:3c02::f03c:93ff:fed3:4a76
-deny from 2001:16a2:c1f0:17f4:bd56:3f3b:b1b1:b3e
-deny from 2a05:ad00:b:0:125::1
+deny from 103.132.52.177
+deny from 87.116.167.52
+deny from 45.148.10.169
+deny from 51.89.153.112
+deny from 192.42.116.216
+deny from 136.243.220.212
+deny from 103.50.168.22
+deny from 185.220.101.30
+deny from 85.208.98.24
+deny from 41.140.74.34
+deny from 185.220.101.12
+deny from 20.171.206.225
+deny from 192.42.116.183
+deny from 45.148.10.111
+deny from 185.220.101.106
+deny from 109.70.100.66
+deny from 20.171.206.224
+deny from 185.220.101.16
+deny from 185.107.57.65
+deny from 20.90.176.154
+deny from 46.28.104.66
+deny from 89.58.26.216
+deny from 172.104.184.11
+deny from 200.24.131.125
+deny from 136.243.220.213
+deny from 216.71.50.62
+deny from 192.42.116.177
+deny from 136.243.228.181
+deny from 185.220.101.20
+deny from 185.220.101.22
+deny from 185.191.171.11
+deny from 185.220.101.25
+deny from 108.171.102.248
+deny from 216.244.66.251
+deny from 216.131.82.230
+deny from 103.234.26.105
+deny from 192.42.116.173
+deny from 27.147.184.218
+deny from 185.107.57.64
+deny from 103.197.206.89
+deny from 167.71.206.51
+deny from 221.139.249.113
+deny from 160.248.189.196
+deny from 103.122.139.18
+deny from 192.42.116.185
+deny from 103.141.208.84
+deny from 143.110.240.68
+deny from 168.119.68.254
+deny from 185.220.100.253
+deny from 185.220.101.9
+deny from 201.244.199.157
+deny from 103.251.167.20
+deny from 103.141.208.102
+deny from 152.32.212.63
+deny from 118.179.205.98
+deny from 203.215.174.94
+deny from 185.220.101.100
+deny from 109.70.100.6
+deny from 192.42.116.215
+deny from 46.140.11.186
+deny from 206.189.153.51
+deny from 185.220.101.6
+deny from 185.220.100.243
+deny from 80.67.167.81
+deny from 109.70.100.70
+deny from 217.113.194.99
+deny from 217.113.194.93
+deny from 18.212.143.63
+deny from 34.229.155.40
+deny from 217.113.194.92
+deny from 45.94.31.68
+deny from 217.113.194.101
+deny from 217.113.194.98
+deny from 195.154.122.116
+deny from 217.113.194.100
 deny from 2406:a340:1a:3020:8192:e7dd:fd71:b790
 deny from 2001:171b:226a:8b20:d54c:eedf:a294:d0f3
 deny from 2605:6440:5000:1:207:188:6:20
@@ -935,28 +900,35 @@ deny from 2604:2dc0:101:200::3401
 deny from 2001:1c06:2010:bb00:404b:9203:7c8d:4cff
 deny from 2a02:587:7211:e425:b937:10e5:7ad8:a6f9
 deny from 2603:3:6105:3360::
+deny from 2001:171b:226a:8b20:b441:9c1e:d80c:8a7a
 
 
 ##############
 #
-#  User Submitted Blacklist IPs: 391 ip (14 August 2024 - 24 August 2024)
+#  User Submitted Blacklist IPs: 409 ip (15 August 2024 - 25 August 2024)
 #
 
 deny from 2.57.122.123
 deny from 3.25.119.89
 deny from 3.92.120.28
 deny from 3.112.192.127
+deny from 5.62.58.250
 deny from 5.78.115.107
 deny from 5.161.179.105
 deny from 5.180.254.232
 deny from 5.181.234.174
+deny from 5.252.238.228
 deny from 8.219.71.230
 deny from 8.220.72.125
 deny from 13.39.108.85
 deny from 13.50.237.243
+deny from 13.76.58.221
 deny from 13.111.74.83
+deny from 15.223.70.79
 deny from 20.15.166.158
+deny from 20.51.234.92
 deny from 20.109.10.121
+deny from 20.151.73.211
 deny from 23.26.76.26
 deny from 34.80.80.163
 deny from 34.117.212.181
@@ -973,12 +945,15 @@ deny from 35.159.109.137
 deny from 35.162.217.166
 deny from 35.167.167.38
 deny from 35.167.242.219
+deny from 35.196.34.174
 deny from 35.216.218.118
 deny from 35.216.218.233
 deny from 37.60.238.187
 deny from 37.114.63.32
+deny from 37.120.236.214
 deny from 37.237.199.24
 deny from 38.45.67.15
+deny from 38.52.71.106
 deny from 38.68.46.205
 deny from 38.242.200.60
 deny from 38.242.209.137
@@ -996,6 +971,7 @@ deny from 43.133.38.182
 deny from 43.134.66.205
 deny from 43.134.89.111
 deny from 43.134.170.46
+deny from 43.134.173.99
 deny from 43.135.149.154
 deny from 43.135.181.13
 deny from 43.152.72.247
@@ -1010,8 +986,10 @@ deny from 43.163.3.58
 deny from 43.163.6.124
 deny from 43.245.35.74
 deny from 44.243.73.155
+deny from 45.58.184.234
 deny from 45.61.58.51
 deny from 45.73.161.199
+deny from 45.76.47.94
 deny from 45.84.128.119
 deny from 45.87.43.241
 deny from 45.89.247.57
@@ -1042,8 +1020,10 @@ deny from 51.159.156.62
 deny from 51.161.212.158
 deny from 51.195.145.86
 deny from 51.195.180.234
+deny from 52.5.131.227
 deny from 52.24.113.59
 deny from 52.36.88.102
+deny from 52.66.255.42
 deny from 52.164.231.90
 deny from 52.176.206.64
 deny from 52.222.201.3
@@ -1055,9 +1035,12 @@ deny from 54.191.198.73
 deny from 54.200.35.109
 deny from 54.212.143.152
 deny from 57.154.48.46
+deny from 57.154.49.58
 deny from 58.182.198.249
 deny from 60.191.125.35
 deny from 62.72.45.33
+deny from 62.146.169.250
+deny from 62.171.163.59
 deny from 62.171.181.174
 deny from 64.62.197.73
 deny from 64.62.197.165
@@ -1068,13 +1051,12 @@ deny from 65.49.20.66
 deny from 65.49.20.67
 deny from 65.49.20.68
 deny from 65.49.20.69
+deny from 66.165.243.218
 deny from 68.183.225.172
 deny from 69.12.38.242
 deny from 71.83.29.157
 deny from 72.52.15.18
 deny from 74.50.79.163
-deny from 74.82.47.2
-deny from 74.82.47.3
 deny from 74.82.47.4
 deny from 74.82.47.5
 deny from 75.119.158.52
@@ -1083,6 +1065,7 @@ deny from 77.237.241.114
 deny from 78.153.140.222
 deny from 78.165.155.161
 deny from 80.242.208.68
+deny from 82.166.180.178
 deny from 82.197.69.243
 deny from 82.208.23.220
 deny from 84.239.10.132
@@ -1108,22 +1091,21 @@ deny from 91.223.227.17
 deny from 91.223.227.31
 deny from 91.237.124.245
 deny from 92.118.39.167
-deny from 92.119.36.15
-deny from 92.119.36.52
 deny from 94.141.120.36
 deny from 94.156.64.214
 deny from 94.156.67.70
 deny from 94.156.68.162
-deny from 94.156.177.51
-deny from 94.156.177.60
 deny from 94.249.59.128
 deny from 95.179.160.31
+deny from 95.217.160.204
 deny from 96.126.110.74
 deny from 100.42.177.251
 deny from 100.42.187.109
+deny from 101.56.157.56
 deny from 102.89.23.99
 deny from 103.67.163.199
 deny from 103.114.106.2
+deny from 103.133.214.36
 deny from 103.153.77.210
 deny from 103.171.0.217
 deny from 103.177.181.183
@@ -1136,6 +1118,7 @@ deny from 104.21.33.153
 deny from 104.21.48.226
 deny from 104.21.51.115
 deny from 104.21.72.158
+deny from 104.243.42.138
 deny from 104.248.165.201
 deny from 107.148.50.145
 deny from 107.150.110.204
@@ -1167,6 +1150,7 @@ deny from 142.136.81.135
 deny from 143.198.84.137
 deny from 143.198.91.180
 deny from 144.22.151.82
+deny from 144.217.252.194
 deny from 146.190.83.101
 deny from 146.190.103.103
 deny from 147.182.200.94
@@ -1175,10 +1159,10 @@ deny from 150.109.253.34
 deny from 152.42.178.160
 deny from 153.127.42.205
 deny from 154.53.162.228
-deny from 154.213.185.141
 deny from 154.213.185.247
 deny from 154.216.16.80
 deny from 154.216.18.39
+deny from 154.216.19.156
 deny from 154.216.20.215
 deny from 154.223.16.208
 deny from 155.254.194.89
@@ -1199,9 +1183,11 @@ deny from 170.64.227.112
 deny from 170.106.101.31
 deny from 170.106.104.42
 deny from 170.106.171.77
+deny from 170.106.197.109
 deny from 172.67.135.227
 deny from 172.67.152.176
 deny from 172.67.179.132
+deny from 172.67.191.193
 deny from 172.93.148.190
 deny from 172.96.172.54
 deny from 172.210.35.254
@@ -1215,8 +1201,8 @@ deny from 178.79.139.171
 deny from 178.128.37.28
 deny from 178.128.120.85
 deny from 178.128.245.134
+deny from 178.215.236.28
 deny from 178.215.236.91
-deny from 178.215.236.137
 deny from 178.215.236.236
 deny from 178.215.236.244
 deny from 179.7.180.77
@@ -1227,10 +1213,6 @@ deny from 180.214.237.198
 deny from 180.214.239.121
 deny from 181.214.167.145
 deny from 182.184.250.159
-deny from 184.105.139.67
-deny from 184.105.139.68
-deny from 184.105.139.69
-deny from 184.105.139.70
 deny from 184.105.247.194
 deny from 184.105.247.195
 deny from 184.105.247.196
@@ -1239,6 +1221,7 @@ deny from 184.105.247.238
 deny from 184.154.46.40
 deny from 185.82.219.136
 deny from 185.91.69.113
+deny from 185.93.2.67
 deny from 185.128.9.124
 deny from 185.133.250.240
 deny from 185.133.251.116
@@ -1248,7 +1231,6 @@ deny from 185.196.9.227
 deny from 185.203.217.241
 deny from 185.213.27.218
 deny from 185.213.175.176
-deny from 185.230.138.122
 deny from 185.241.208.131
 deny from 185.254.98.118
 deny from 186.11.126.194
@@ -1274,9 +1256,10 @@ deny from 197.146.18.129
 deny from 198.7.127.90
 deny from 198.46.154.150
 deny from 198.74.49.166
-deny from 199.127.62.12
+deny from 202.168.86.62
 deny from 202.170.201.10
 deny from 204.93.149.215
+deny from 205.209.118.139
 deny from 206.72.198.91
 deny from 206.189.191.22
 deny from 207.135.3.46
@@ -1292,16 +1275,13 @@ deny from 210.252.39.99
 deny from 212.113.102.134
 deny from 213.109.147.139
 deny from 213.142.151.103
+deny from 213.199.55.152
+deny from 213.202.233.34
 deny from 216.24.216.224
-deny from 216.218.206.66
-deny from 216.218.206.67
-deny from 216.218.206.68
-deny from 216.218.206.69
 deny from 217.15.160.44
 deny from 217.76.51.164
 deny from 217.164.55.203
 deny from 223.244.35.77
-deny from 2a12:5940:ab42:7219:102:c834:eeeb:4190
 deny from 2a12:b201:23f6:b923:c910:c045:199d:4d97
 deny from 2a12:b201:f26d:c87d:e80c:2e2b:7ea5:28d0
 deny from 2002:a05:6902:2209:b0:e13:db21:6095
@@ -1333,4 +1313,8 @@ deny from 2a12:b201:fc82:61f5:3ae0:f877:2ace:f33
 deny from 2a12:8642:ea9e:95e3:8a65:4773:af4c:692c
 deny from 2a12:8642:2ec2:4e6d:206c:dd93:490b:eaba
 deny from 2a12:b201:bf9d:4b1d:1140:37f:59a9:2ff7
+deny from 2002:a05:620a:4623:b0:7a1:d306:4ba7
+deny from 2002:a17:90a:bf11:b0:2c8:858:7035
+deny from 2a12:b201:a305:c5a0:7267:4c3e:8939:baa3
+deny from 2002:a05:622a:4896:b0:447:f89a:4d41
 
