--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 wp-content/plugins/all-in-one-wp-migration/storage/zlxk2cnlgydd/*.wpress
 wp-content/ai1wm-backups/*.wpress 
 vendor/
+
+wp-content/uploads/
+wp-content/ewww/
+.htaccess
